Fix customer add and customer list